# illumina

./: .gitignore  CMakeLists.txt  README.md
src/: Engine.cpp  Engine.h  main.cpp
src/core/: Camera.cpp  Camera.h  Component.cpp  Component.h  GameObject.cpp  GameObject.h  PrimitiveType.h  Scene.cpp  Scene.h  Transform.cpp  Transform.h
